# iseetruth

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/app/: config.py  exceptions.py  main.py
apps/api/app/db/: neo4j.py  postgres.py  qdrant.py  redis.py  sync_neo4j.py  sync_postgres.py
apps/api/app/llm/: client.py  embeddings.py  prompts.py  schemas.py
apps/api/app/models/: __init__.py  chunk.py  dismissed_match.py  document.py  investigation.py
apps/api/app/schemas/: chunk.py  cross_investigation.py  document.py  entity.py  error.py  graph.py  health.py  investigation.py  query.py  relationship.py
apps/api/app/services/: chunk.py  chunking.py  cross_investigation.py  document.py  embedding.py  entity_query.py  events.py  extraction.py  graph_query.py  health.py  health_monitor.py  image_extraction.py  investigation.py  query.py  text_extraction.py  vision.py  web_capture.py
apps/api/app/worker/: celery_app.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_create_investigations_table.py  002_create_documents_table.py  003_add_extracted_text_and_error_message.py  004_create_document_chunks_table.py  005_add_document_confidence_columns.py  006_add_failed_stage_to_documents.py  007_add_retry_count_to_documents.py  008_add_document_type.py  009_add_source_url_to_documents.py  010_add_ocr_confidence.py  (+4 more)
apps/api/tests/: conftest.py  test_config.py  test_docker_compose.py  test_extraction_confidence.py  test_health.py  test_structure.py
(+234 files in other folders)
