[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "celery[redis]>=5.6.2",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "neo4j>=6.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8.1",
    "pymupdf>=1.27.1",
    "qdrant-client>=1.17.0",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
